add front end and html.

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
       <h1>To-Do Lists</h1>
     </div>
   <form id="form">
-    <label for="new-first-name">First Name</label>
+    <label for="new-first-name" id="name ">First Name</label>
     <input type="text" id="new-first-name">
     <div id="list-picker">
-      <input class="picker" type="radio"value="grocery">Grocery List
-      <input class="picker" type="radio"value="social">Social
-      <input class="picker" type="radio"value="work">Work
-      <input class="picker" type="radio" value="school">School
-      <input class="picker" type="radio" value="transportation">Transportation
+      <input class="picker" name: "grocery" type="radio"value="grocery">Grocery List
+      <input class="picker" name: "social" type="radio"value="social">Social
+      <input class="picker" name: "work" type="radio"value="work">Work
+      <input class="picker" name: "school" type="radio" value="school">School
+      <input class="picker" name: "transportation" type="radio" value="transportation">Transportation
   </div>
     <br>
-    <h3><span id="newTask">New Task:</span></h3>
+    <h3><span>New Task:</span></h3>
     <div id="task-inputs">
     <label for="new-task-name">Task Name:</label>
-    <input type="text" id="new-task-name">
+    <input type="text" id="newTaskName">
     <label id="details" for="new-task-details">Details</label>
     <input type="text" id="new-task-details">
     <label id="prioritize" for="new-task-prioritization">Prioritization</label>
